# pedersen-py

./: .gitignore  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/pedersen-kit/: Cargo.toml  README.md
crates/pedersen-kit/src/: circom.rs  components.rs  instances.rs  lib.rs  zcash.rs
crates/pedersen-kit/tests/: circom.rs  parity.rs  zcash.rs
crates/pedersenpy/: Cargo.toml  README.md  pyproject.toml
crates/pedersenpy/python/pedersenpy/: __init__.py  __init__.pyi
crates/pedersenpy/src/: lib.rs
crates/pedersenpy/tests/: test_vectors.py  typing_smoke.py
docs/: compatibility.md  concepts.md  index.md  publishing.md  python.md  rust.md
docs/javascripts/: mathjax.js
python/pedersenpy/: __init__.py
src/: lib.rs
tests/: test_add.py  test_babyjubjub.py
