[workspace]
resolver = "2"
members = ["crates/pedersen-kit", "crates/pedersenpy"]

# `[patch]` must live at the workspace root. `ark-babyjubjub` is built from the
# algebra git tree, which path-references its sibling `ark-*` crates; redirect the
# crates.io versions to the same git revision so the whole graph shares one source.
# Remove this whole section once `ark-babyjubjub` is published to crates.io.
[patch.crates-io]
ark-ff = { git = "https://github.com/luksgrin/algebra", rev = "4e3af11901a13daa6aacfa441bdc2087a05ceba4" }
ark-ec = { git = "https://github.com/luksgrin/algebra", rev = "4e3af11901a13daa6aacfa441bdc2087a05ceba4" }
ark-serialize = { git = "https://github.com/luksgrin/algebra", rev = "4e3af11901a13daa6aacfa441bdc2087a05ceba4" }
ark-poly = { git = "https://github.com/luksgrin/algebra", rev = "4e3af11901a13daa6aacfa441bdc2087a05ceba4" }
