[package]
name = "pedersen-kit"
version = "0.1.0"
edition = "2024"
description = "A single skeleton for constructing the family of Pedersen hash functions over arkworks curves"
license = "MIT OR Apache-2.0"

[dependencies]
ark-ec = "0.6"
ark-ff = "0.6"
ark-serialize = "0.6"
ark-std = "0.6"
ark-ed-on-bls12-381 = "0.6"
# ERC-2494 Baby Jubjub: not yet on crates.io. Pinned to arkworks-rs/algebra#1123
# until it merges and publishes; then switch to a version requirement. The
# `[patch.crates-io]` unifying the arkworks graph lives in the workspace root.
ark-babyjubjub = { git = "https://github.com/luksgrin/algebra", rev = "4e3af11901a13daa6aacfa441bdc2087a05ceba4" }

# Optional: only pulled in when the matching spec-compat feature is enabled.
blake-hash = { version = "0.4", optional = true }   # circom BLAKE-256 generators
blake2s_simd = { version = "1", optional = true }   # Zcash BLAKE2s generators

[features]
default = ["circom", "zcash"]
# Byte-compatible circom / iden3 (`circomlibjs pedersenHash`) instance.
circom = ["dep:blake-hash"]
# Byte-compatible Zcash Sapling Pedersen hash instance.
zcash = ["dep:blake2s_simd"]

[dev-dependencies]
ark-crypto-primitives = { version = "0.6", features = ["crh"] }
