[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pedersenpy"
version = "0.1.1"
description = "Construct and invoke Pedersen hash functions (Rust-backed, arkworks)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["pedersen", "hash", "cryptography", "zero-knowledge", "baby-jubjub", "circom", "zcash"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/luksgrin/pedersen-py"
Documentation = "https://luksgrin.github.io/pedersen-py/"
Repository = "https://github.com/luksgrin/pedersen-py"

[tool.maturin]
module-name = "pedersenpy._pedersenpy"
python-source = "python"
